# distributed_calculations_course

./: .gitignore  CMakeLists.txt  banking.h  distributed.run.xml  ipc.h  main.c  pa23.c
